# exos_cleancode

./: .gitignore  README.md  pyproject.toml
src/jarfarb_toolkit/: cli.py
