[project]
name = "jarfarb-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Jarfar Boukamza",email = "jarfarb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "jarfarb_toolkit", from = "src"}]

[tool.poetry.scripts]
hello = "jarfarb_toolkit.cli:hello"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310" # Python version (examples: 39 for 3.9, 310 for 3.10, etc.)
line-length = 120 # Maximum line-length for formatting
exclude = [ 
    "bin",
    "guidelines",
    "notebooks",
    "tests", 
    "validation_tests"
]
src = ["src"]

[tool.ruff.lint]
ignore = [ # Rules to ignore. In this example these are all docstring (D) related rules.
    "D100", # Missing docstring
    "D205", # 1 blank line required between summary qnd description
    "D415", # First line should end with a period, question mark or exclamation point.
]
select = [ # Sets of rules to check for
    "B",    # bugbear
    "C4",   # comprehensions
    "C90",  # mccabe
    "D",    # docstrings
    "E",    # pycodestyle
    "W",    # pycodestyle
    "F",    # flake8
    "S",    # bandit
    "N",    # pep8-naming
    "RUF",  # ruff
    "I",    # isort
    "PD",   # pandas
]

[tool.ruff.lint.pydocstyle]
convention = "google" # The type of docstring style to follow. Will be elaborated on in the module about docstrings.